--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -6,6 +6,7 @@
         <img class="media-object img-rounded" src="<%= gravatar_url(current_user, options = { size: 50 }) %>" alt="">
       </div>
       <div class="media-body">
+        <%= render 'microposts/favorite', micropost: micropost %>
         <div>
           <%= link_to user.name, user_path(user) %> <span class="text-muted">posted at <%= micropost.created_at %></span>
         </div>
@@ -18,7 +19,6 @@
           <% end %>
         </div>
       </div>
-      <%= render 'microposts/favorite_form', micropost: micropost %>
     </li>
   <% end %>
   <%= paginate microposts %>
